--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@material-ui/core": "^1.3.0",
+    "@material-ui/icons": "^1.1.0",
     "dinero.js": "^1.4.0",
     "react": "^16.4.1",
     "react-bootstrap": "^0.32.1",
@@ -14,7 +16,8 @@
     "react-scripts": "^1.1.4",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
-    "superagent": "^3.8.3"
+    "superagent": "^3.8.3",
+    "typeface-roboto": "^0.0.54"
   },
   "scripts": {
     "start": "react-scripts start",
